--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -61,6 +61,10 @@
     },
     "name": {
       "type": "string"
+    },
+    "orders": {
+      "via": "user",
+      "collection": "orders"
     }
   }
 }
