Item price fixed

--- a/api/price/models/price.settings.json
+++ b/api/price/models/price.settings.json
@@ -54,7 +54,7 @@
     "pepperoniPizza": {
       "type": "decimal"
     },
-    "musroomSalad": {
+    "mushroomSalad": {
       "type": "decimal"
     }
   }
