--- a/api/price/models/price.settings.json
+++ b/api/price/models/price.settings.json
@@ -39,7 +39,7 @@
     "crispyFriedChicken": {
       "type": "decimal"
     },
-    "ovenBakedPasta": {
+    "pasta": {
       "type": "decimal"
     },
     "fishFingers": {
